Reduce width of position container slightly to prevent horizontal scrolling in htv

--- a/frontend/src/style/highlight.sass
+++ b/frontend/src/style/highlight.sass
@@ -5,6 +5,7 @@
 
     .position-container
         position: relative // required for positioning of highlights
+        width: 99%
 
     .textWrapper
         position: relative // required for z-index to work
